# pilfer

./: .gitignore  MANIFEST.in  README.md  bandit-report.json  build_and_publish.sh  bulk-decrypt-vault.py  pilfer.py  pyproject.toml
.github/workflows/: README.md  ci.yml  test.yml
pilfer/: __init__.py  cli.py
tests/: README.md  __init__.py  run_tests.py  test_pilfer_unified.py
